--- a/game.project
+++ b/game.project
@@ -2,19 +2,30 @@
 title = My project
 version = 0.1
 
+[render]
+clear_color_red = 0.5
+
 [bootstrap]
 main_collection = /main/main.collectionc
+render = /render/custom.renderc
 
 [input]
 game_binding = /input/game.input_bindingc
 
 [display]
-width = 1280
-height = 720
+width = 800
+height = 600
 
 [physics]
 scale = 0.02
 
 [script]
 shared_state = 1
+
+[sprite]
+max_count = 512
+
+[graphics]
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
 
